--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,9 @@ cache: npm
 branches:
   only:
     - main # build master branch only
-script:
+before_install:
   - npm install -g hexo-cli
+script:
   - hexo generate # generate static files
 deploy:
   provider: pages
