--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ branches:
 before_install:
   - npm install -g hexo-cli
 script:
+  - hexo clean 
   - hexo generate # generate static files
 deploy:
   provider: pages
